--- a/project/modules/logboard-views/app/index.html
+++ b/project/modules/logboard-views/app/index.html
@@ -37,7 +37,7 @@
     -->
 
     <!-- Material Design Lite page styles:
-    You can choose other color schemes from the CDN, more info here http://www.getmdl.io/customize/index.html
+    You can choose other color schemes from the CDN, more formats here http://www.getmdl.io/customize/index.html
     Format: material.color1-color2.min.css, some examples:
     material.red-teal.min.css
     material.blue-orange.min.css
