[add] msg_router

--- a/project/modules/logviews/app/index.html
+++ b/project/modules/logviews/app/index.html
@@ -85,9 +85,9 @@
     <!--简单数量统计-->
     <div id="apps_general1" class="row _divider_stripe bg_gray_shallow">
         <div class="col-sm-4 ">
-            <div style="margin-top: 18%">
-                <i class="fa fa-cubes fa-2x"></i>
-                <div class="stats_count_number">12</div>
+            <div style="margin-top: 18%" >
+                <i class="fa fa-cubes fa-2x" ></i>
+                <div class="stats_count_number " onclick="window.open('views/log_apps.html')">12</div>
                 <div class="stats_count_desc">接入应用数</div>
             </div>
         </div>
