--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -88,7 +88,7 @@
             <div style="margin-top: 18%" >
                 <i class="fa fa-cubes fa-2x" ></i>
                 <div class="stats_count_number " onclick="window.open('views/log_apps.html')">12</div>
-                <div class="stats_count_desc">接入应用数</div>
+                <div class="stats_count_desc"><button class="btn bg_transparent _no_border" onclick="window.open('views/log-apps.html')"> 接入应用数</button> </div>
             </div>
         </div>
 
@@ -96,14 +96,14 @@
             <div style="margin-top: 18%">
                 <i class="fa fa-th fa-2x"></i>
                 <div class="stats_count_number">12306</div>
-                <div class="stats_count_desc">日志处理量</div>
+                <div class="stats_count_desc"><button class="btn bg_transparent _no_border" onclick=""> 日志处理量</button></div>
             </div>
         </div>
         <div class="col-sm-4 ">
             <div style="margin-top: 18%">
                 <i class="fa fa-bell fa-2x"></i>
                 <div class="stats_count_number">1</div>
-                <div class="stats_count_desc">待处理异常</div>
+                <div class="stats_count_desc"><button class="btn bg_transparent _no_border" onclick="window.open('views/logs-monitor.html')"> 待处理异常</button></div>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
 
 <!--系统概览模块-->
 <div id="logsOverview" class="container-fluid _height_600  ">
-    <div class="row  _height100 _text_align_center margin-top3 ">
+    <div class="row  _height_480 _text_align_center margin-top3 ">
         <!--日志饼状图-->
         <div class="col-sm-5">
             <div class="row">
@@ -129,7 +129,7 @@
                 <div class="col-sm-3 _text_align_center">
                 </div>
                 <div class="col-sm-4 _text_align_center">
-                    <span class="h3">日志实时处理量</span>
+                    <span class="h3">日志实时处理</span>
                 </div>
                 <div class="col-sm-5 _text_align_right">
                     <span class="align_right ">
@@ -315,7 +315,7 @@
 <div id="logsBehavior" class="container-fluid screen-page bg_gray_shallow">
     <a name="aLogsBehavior"></a>
     <div class="row blank_divider30"></div>
-    <div class="row _height100">
+    <div class="row _height_640">
 
         <!--访问排行榜-->
         <div class="col-sm-3 _text_align_center ">
