[add] real time data structure

--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -88,7 +88,7 @@
         <div class="col-sm-4 ">
             <div style="margin-top: 18%">
                 <i class="fa fa-cubes fa-2x"></i>
-                <div class="stats_count_number " onclick="window.open('views/log_apps.html')">12</div>
+                <div id="totalAppsCounts" class="stats_count_number " onclick="window.open('views/log_apps.html')">12</div>
                 <div class="stats_count_desc">
                     <button class="btn bg_transparent _no_border" onclick="window.open('views/log-apps.html')"> 接入应用数
                     </button>
@@ -99,7 +99,7 @@
         <div class="col-sm-4 ">
             <div style="margin-top: 18%">
                 <i class="fa fa-th fa-2x"></i>
-                <div class="stats_count_number">12306</div>
+                <div id="totalLogCounts" class="stats_count_number">12306</div>
                 <div class="stats_count_desc">
                     <button class="btn bg_transparent _no_border" onclick=""> 日志处理量</button>
                 </div>
@@ -108,7 +108,7 @@
         <div class="col-sm-4 ">
             <div style="margin-top: 18%">
                 <i class="fa fa-bell fa-2x"></i>
-                <div class="stats_count_number">1</div>
+                <div id="newExpCounts" class="stats_count_number">1</div>
                 <div class="stats_count_desc">
                     <button class="btn bg_transparent _no_border" onclick="window.open('views/logs-monitor.html')">
                         待处理异常
