--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -428,6 +428,8 @@
 <script type="text/javascript" src="res/scripts/js/bootstrap-3.3.7.js"></script>
 <script type="text/javascript" src="res/scripts/js/holder-2.6.0.min.js"></script>
 <script type="text/javascript" src="res/scripts/js/d3-3.5.17.js"></script>
+<script type="text/javascript" src="res/scripts/js/stomp-2.3.3.min.js"></script>
+<script type="text/javascript" src="res/scripts/js/sockjs-1.0.3.min.js"></script>
 <script type="text/javascript" src="res/scripts/js/nv.d3.js"></script>
 <script type="text/javascript" src="res/scripts/js/leaflet-1.0.0rc3.js"></script>
 <script type="text/javascript" src="res/scripts/logscharts.js"></script>
