[add] fetch app counts

--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -432,10 +432,11 @@
 <script type="text/javascript" src="res/scripts/js/sockjs-1.0.3.min.js"></script>
 <script type="text/javascript" src="res/scripts/js/nv.d3.js"></script>
 <script type="text/javascript" src="res/scripts/js/leaflet-1.0.0rc3.js"></script>
+<script type="text/javascript" src="res/scripts/url.js"></script>
 <script type="text/javascript" src="res/scripts/logscharts.js"></script>
 <script type="text/javascript" src="res/scripts/utils.js"></script>
 <script type="text/javascript" src="res/scripts/ipviews.js"></script>
-<script type="text/javascript" src="res/scripts/newmsg.js"></script>
+<script type="text/javascript" src="res/scripts/index_socket_msg.js"></script>
 <script type="text/javascript" src="res/scripts/js/mapbox.js"></script>
 <!--<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>-->
 
@@ -455,8 +456,11 @@
         //绘制IP访客分布图
         createIPGeoViews();
 
+        //每次载入只更新一次的请求
+        requestMsgOnce();
+
         //监听socket实时消息
-        waitingForNewMsg();
+        waitingForSocketMsg();
 
     })();
 
