--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -437,6 +437,7 @@
 <script type="text/javascript" src="res/scripts/utils.js"></script>
 <script type="text/javascript" src="res/scripts/ipviews.js"></script>
 <script type="text/javascript" src="res/scripts/index_socket_msg.js"></script>
+<script type="text/javascript" src="res/scripts/index_msg_once.js"></script>
 <script type="text/javascript" src="res/scripts/js/mapbox.js"></script>
 <!--<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>-->
 
