[fix] apps pie chart

--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -133,9 +133,15 @@
             </div>
             <div class="blank_divider30"></div>
 
-            <div class="row">
-                <svg id="svgLogsGenaralPie" width="320" height="480"></svg>
+            <div class="row _height_350">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10">
+                    <svg id="svgLogsGenaralPie" width="325" height="325"></svg>
+                </div>
+                <div class="col-sm-1"></div>
             </div>
+            <div class="blank_divider20"></div>
+            <div class="">时间</div>
 
         </div>
         <!--日志曲线图-->
