--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -141,7 +141,7 @@
                 <div class="col-sm-1"></div>
             </div>
             <div class="blank_divider20"></div>
-            <div class="">时间</div>
+            <div class="text-muted">统计时间：<span id="updatePieIndicator">2016-12-07 10:27:29</span></div>
 
         </div>
         <!--日志曲线图-->
