[add] href to log exps page

--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -242,7 +242,7 @@
                         </ul>
                         <div class="card-block exp_contents_padding ">
                             <div class="_float_left">
-                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+                                <a href="views/log-exps.html" class="card-link exp_card_text_size">查看详情</a>
 
                             </div>
                             <div class="_float_right">
@@ -270,7 +270,7 @@
                         </ul>
                         <div class="card-block exp_contents_padding ">
                             <div class="_float_left">
-                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+                                <a href="views/log-exps.html" class="card-link exp_card_text_size">查看详情</a>
 
                             </div>
                             <div class="_float_right">
@@ -299,7 +299,7 @@
                         </ul>
                         <div class="card-block exp_contents_padding ">
                             <div class="_float_left">
-                                <a href="#" class="card-link exp_card_text_size">查看详情</a>
+                                <a href="views/log-exps.html" class="card-link exp_card_text_size">查看详情</a>
 
                             </div>
                             <div class="_float_right">
