--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -88,7 +88,7 @@
         <div class="col-sm-4 ">
             <div style="margin-top: 18%">
                 <i class="fa fa-cubes fa-2x"></i>
-                <div id="totalAppsCounts" class="stats_count_number " onclick="window.open('views/log_apps.html')">12
+                <div id="totalAppsCounts" class="stats_count_number " onclick="window.open('views/log-apps.html')">12
                 </div>
                 <div class="stats_count_desc">
                     <button class="btn bg_transparent _no_border" onclick="window.open('views/log-apps.html')"> 接入应用数
@@ -415,7 +415,7 @@
         <div class="col-sm-6 _text_align_right">
             <i class="fa fa-phone"></i></div>
         <div class="col-sm-6 _text_align_left">
-            <span style="padding-left: 15px">17086542389</span></div>
+            <span style="padding-left: 15px">17012345678</span></div>
     </div>
     <div class="row">
         <div class="col-sm-6 _text_align_right">
