[add] type names

--- a/project/modules/log-boot/src/main/resources/static/index.html
+++ b/project/modules/log-boot/src/main/resources/static/index.html
@@ -316,7 +316,7 @@
         </div>
 
         <div class="col-sm-1  _text_align_center _to_top30 ">
-            <i class="fa  fa-angle-right fa-4x  c_bdbdbd"></i>
+            <i class="fa fa-angle-right fa-4x c_bdbdbd"></i>
         </div>
     </div>
 </div>
@@ -333,7 +333,13 @@
         <!--<svg id="svgLogsStats" width="1280" height="420"></svg>-->
     </div>
     <div class="row ">
-        分类标签
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <div id="typeNameDiv">
+                <!--<div style="width:20%" class="_float_left _text_align_center" >日志类型-ACCOUNT</div>-->
+            </div>
+        </div>
+        <div class="col-sm-1"></div>
     </div>
 </div>
 <!--/日志统计模块-->
@@ -341,12 +347,13 @@
 <!--用户挖掘模块-->
 <div id="logsBehavior" class="container-fluid screen-page bg_gray_shallow">
     <a name="aLogsBehavior"></a>
+    <h3 class="_text_align_center">未实现动请求</h3>
+
     <div class="row blank_divider30"></div>
     <div class="row _height_640">
 
         <!--访问排行榜-->
         <div class="col-sm-3 _text_align_center ">
-
             <div class="card text-xs-center ">
                 <div class="card-header">
                     <ul class="nav nav-pills card-header-pills float-xs-left">
@@ -356,7 +363,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0)">搜索排行</a>
                         </li>
-
                     </ul>
                 </div>
                 <div class="card-block bg_f5f5f5 ">
@@ -440,7 +446,7 @@
 <script type="text/javascript" src="res/scripts/logscharts.js"></script>
 <script type="text/javascript" src="res/scripts/utils.js"></script>
 <script type="text/javascript" src="res/scripts/ipviews.js"></script>
-<script type="text/javascript" src="res/scripts/index_socket_msg.js"></script>
+<script type="text/javascript" src="res/scripts/index_msg_socket.js"></script>
 <script type="text/javascript" src="res/scripts/index_msg_once.js"></script>
 <script type="text/javascript" src="res/scripts/js/mapbox.js"></script>
 <!--<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>-->
